# monad-automator

./: Cargo.toml  README.md  build.rs
i18n/en-US/: mona_auto.ftl
i18n/ja-JP/: mona_auto.ftl
i18n/ko-KR/: mona_auto.ftl
i18n/zh-CN/: mona_auto.ftl
src/: i18n.rs
src/core/: action.rs  automation_loop.rs  capture.rs  discord.rs  expression.rs  input.rs  matcher.rs  mod.rs  project.rs  setting.rs  window.rs
src/gui/: app.rs  defines.rs  egui.rs  mod.rs  util.rs
src/gui/components/: action_panel.rs  add_action_modal.rs  image_edit_viewport.rs  image_list_panel.rs  image_preview_panel.rs  menu_bar.rs  mod.rs  project_panel.rs  setting_panel.rs  variables_viewport.rs
translations/ko-kr/: README.md
