[package]
name = "mona_auto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
once_cell = "1.21.3"
uuid = { version = "1.8.1", features = ["serde", "v4"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ron = "0.11.0"

# Image
image = "0.25"
imageproc = "0.25"
win-screenshot = "4.0.13"

# GUI
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
rfd = "0.15.4"

# Internationalization
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester", "autoreload"]}
i18n-embed-fl = "0.10.0"
rust-embed = "8.8.0"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"]}

# Network
reqwest = { version = "0.12", features = ["blocking", "multipart"] }

# Windows API
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"]}

[build-dependencies]
winres = "0.1"